--- a/example/templates/index.html
+++ b/example/templates/index.html
@@ -2,17 +2,18 @@
 <html>
 <head>
     <title>Example</title>
-    {{ emit_yep() }}
+    {{ emit_yep('base') }}
 </head>
 <body>
 
 <h1>Hello World!</h1>
 
 <h3>以下是插件输出的HTML代码</h3>
-    {{ emit_tep('tep2') }}
+    {{ emit_tep('code') }}
 
 <h3>以下是插件引入的HTML文件</h3>
-    {{ emit_tep('tep1') }}
+    {% set extra = 'extra data' %}
+    {{ emit_tep('html', extra=extra) }}
 
 </body>
 </html>
