--- a/flask_pluginkit/templates/manager.html
+++ b/flask_pluginkit/templates/manager.html
@@ -18,19 +18,19 @@
 <body>
 <section class="section">
     <div class="container is-fluid">
-        <a class="button is-danger is-small tooltip" data-tooltip="无交互直接重载你的Web应用进程！" href="javascript:reloadApp()">重启应用</a>
+        <a class="button is-danger is-small tooltip" data-tooltip="No interaction directly reloads your Web application process!" href="javascript:reloadApp()">Restart Application</a>
         <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
             <thead>
                 <tr>
-                    <th>序号</th>
-                    <th><abbr title="插件包名称">名称</abbr></th>
-                    <th>描述</th>
-                    <th>版本</th>
-                    <th>开发者</th>
-                    <th><abbr title="插件主页URL">主页</abbr></th>
-                    <th><abbr title="LICENSE">许可证</abbr></th>
-                    <th>状态</th>
-                    <th>动作</th>
+                    <th>ID</th>
+                    <th><abbr title="Package Name">Name</abbr></th>
+                    <th>Description</th>
+                    <th>Version</th>
+                    <th>Author</th>
+                    <th>Homepage</th>
+                    <th>LICENSE</th>
+                    <th>State</th>
+                    <th>Actoin</th>
                 </tr>
             </thead>
             <tbody>
@@ -46,9 +46,9 @@
                     <th><scan class="{% if p.plugin_state == 'enabled' %}has-text-primary{% else %}has-text-warning{% endif %}">{{ p.plugin_state }}</scan></th>
                     <th>
                         {% if p.plugin_state == 'enabled' %}
-                            <a class="button is-warning is-small" href="javascript:disablePlugin('{{ p.plugin_name }}')">禁用</a>
+                            <a class="button is-warning is-small" href="javascript:disablePlugin('{{ p.plugin_name }}')">Disable</a>
                         {% else %}
-                            <a class="button is-primary is-small"  href="javascript:enablePlugin('{{ p.plugin_name }}')">启用</a>
+                            <a class="button is-primary is-small"  href="javascript:enablePlugin('{{ p.plugin_name }}')">Enable</a>
                         {% endif %}
                     </th>
                 </tr>
@@ -74,18 +74,6 @@
         showNotification();
     }
     function ajax(url, success, options) {
-        /*
-            Ajax提交
-            @param url string: 请求路径
-            @param success function: success为成功后回调函数
-            @param options object:
-                async是否异步; 
-                post,put,delete等方法所需data;
-                error为发生异常时或success返回中code不为0时回调函数;
-                beforeSend为请求前回调函数;
-                complete为完成请求后回调;
-                msgprefix表示success返回code不为0时提示消息的前缀。
-        */
         var that = this,
             urltype = typeof url === 'string',
             successtype = typeof success === "function",
@@ -124,24 +112,24 @@
                 }
             },
             error: function(XMLHttpRequest, textStatus, errorThrown) {
-                setMessage("<scan class='has-text-danger'>系统异常，请稍后再试</scan>。状态码：" + XMLHttpRequest.status + "，" + textStatus);
+                setMessage("<scan class='has-text-danger'>System exception, please try again later</scan>. Status code:" + XMLHttpRequest.status + "," + textStatus);
             },
             complete: options.complete ? options.complete : function() {}
         });
     }
     function enablePlugin(plugin_name) {
         ajax("{{ url_for('.api', Action='enablePlugin') }}&plugin_name=" + plugin_name, function(res) {
-            setMessage("<scan class='has-text-success'>已启用，重启应用后生效</scan>")
+            setMessage("<scan class='has-text-success'>Enabled. Restart the application and take effect.</scan>")
         });
     }
     function disablePlugin(plugin_name) {
         ajax("{{ url_for('.api', Action='disablePlugin') }}&plugin_name=" + plugin_name, function(res) {
-            setMessage("<scan class='has-text-success'>已禁用，重启应用后生效</scan>")
+            setMessage("<scan class='has-text-success'>Disabled. Restart the application and take effect.</scan>")
         });
     }
     function reloadApp() {
         ajax("{{ url_for('.api', Action='reloadApp') }}", function(res) {
-            setMessage("<scan class='has-text-primary'>已重启，即将刷新页面...</scan>")
+            setMessage("<scan class='has-text-primary'>Rebooted, the page will be refreshed...</scan>")
             setTimeout("window.location.reload()", 3000);
         });
     }
