--- a/flask_pluginkit/templates/manager.html
+++ b/flask_pluginkit/templates/manager.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Plugins Web Manager based Flask-PluginKit!</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-tooltip@2.0.2/dist/css/bulma-tooltip.min.css">
     <style type="text/css">
         .notification > button.delete {
             border: none;
@@ -18,7 +17,7 @@
 <body>
 <section class="section">
     <div class="container is-fluid">
-        <a class="button is-danger is-small tooltip" data-tooltip="No interaction directly reloads your Web application process!" href="javascript:reloadApp()">Restart Application</a>
+        <a class="button is-danger is-small" title="No interaction directly reloads your Web application process!" href="javascript:reloadApp()">Restart Application</a>
         <table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
             <thead>
                 <tr>
