compress l10.min.js

--- a/flask_pluginkit/templates/manager.html
+++ b/flask_pluginkit/templates/manager.html
@@ -120,7 +120,7 @@
         </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="{{ url_for('.static', filename='l10n.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('.static', filename='l10n.min.js') }}"></script>
     <script type="text/javascript">
         function showNotification() {
             document.getElementById("notification").style.display = 'block';
