--- a/flask_pluginkit/templates/manager.html
+++ b/flask_pluginkit/templates/manager.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Plugins Web Manager based Flask-PluginKit!</title>
-    <link href="{{ url_for('.static', filename='favicon.png') }}" rel="icon" type="image/x-icon" />
-    <link href="{{ url_for('.static', filename='favicon.png') }}" rel="shortcut icon" type="image/x-icon" />
-    <link rel="prefetch" type="application/l10n" href="{{ url_for('.static', filename='translations.ini') }}" />
+    <link href="https://static.saintic.com/cdn/flask-pluginkit/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="https://static.saintic.com/cdn/flask-pluginkit/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link rel="prefetch" type="application/l10n" href="https://static.saintic.com/cdn/flask-pluginkit/v{{ g.pluginkit_metadata.version }}/translations.ini" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" href="https://static.saintic.com/cdn/iconfont/iconfont.css">
     <style type="text/css">
